configMaster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptc-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptc-api
  template:
    metadata:
      labels:
        app: uptc-api
    spec:
      containers:
      - name: uptc-api
        image: andressparrar/uptc-api:1.5
        ports:
        - containerPort: 8080
        resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
