configMaster/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptc-api-service
spec:
  selector:
    app: uptc-api
  ports:
    - port: 80
      targetPort: 8080
