configMaster/external-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ExternalName
  externalName: 192.168.20.169
  ports:
    - port: 6432
      targetPort: 6432
